2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/network/tsec.c:
	fixed typo in comment of attach function
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, mpc83xx/spi/mpc83xx_spidrv.c,  
	* mpc83xx/spi/mpc83xx_spidrv.h, mpc83xx/include/mpc83xx.h:
	added spi driver
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/i2c/mpc83xx_i2cdrv.c:  
	added IRQ support in I2C driver
	
2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* mpc83xx/network/tsec.c:  
	added statistics counters to tsec
	
2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* mpc5xx/exceptions/raw_exception.c, mpc5xx/irq/irq.c,
	mpc6xx/exceptions/raw_exception.c,
	mpc8260/exceptions/raw_exception.c,
	mpc8xx/exceptions/raw_exception.c, new-exceptions/raw_exception.c,
	ppc403/ictrl/ictrl.c, ppc403/irq/ictrl.c: Code outside of cpukit
	should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-09-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Do not build networking drivers if
	networking is disabled.

2007-09-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* mpc6xx/mmu/pte121.c: Fix warning.

2007-08-06	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, mpc83xx/i2c/mpc83xx_i2cdrv.c:
	added i2c driver
	
2007-07-18	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* new-exceptions/raw_exception.c:
	added PPC_e300c1/2/3 to vector validation code
	
2007-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* configure.ac, Makefile.am, mpc83xx/include/mpc83xx.h,
	* mpc83xx/network/tsec.c, mpc83xx/network/tsec.h :