@@ -1,3 +1,10 @@
+2007-11-06	Till Straumann <strauman@slac.stanford.edu>
+
+	* mpc5xx/irq/irq.c, mpc5xx/exceptions/raw_exception.c,
+	new-exceptions/raw_exception.c: test for non-NULL-ness before calling
+	'on'/'off' methods so that users don't have to provide
+	no-ops if they don't want this feature.
+
 2007-10-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
 
 	* mpc83xx/network/tsec.c:
